--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "concurrently": "^5.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql-aes": "0.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
