--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "mysql-aes": "0.0.1"
+    "nodejs-base64-encode": "^1.1.0",
+    "uuid-token-generator": "^1.0.0",
+    "vue-session": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
