--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodejs-base64-encode": "^1.1.0",
+    "nodemailer": "^6.4.11",
     "uuid-token-generator": "^1.0.0",
     "vue-session": "^1.0.0"
   },
